# claude-2-mail

./: .editorconfig  .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  glama.json  gmail_calendar_mcp.py  pyproject.toml  server.json
.github/workflows/: lint.yml  test.yml
.well-known/mcp/: server-card.json
config/: .secrets.template  config.template.json
easter-egg/: README.md  drive_mcp.py  server.json
easter-egg/.well-known/mcp/: server-card.json
easter_egg/: drive_mcp.py
tests/: test_imports.py
