[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-2-mail"
version = "0.1.0"
description = "Local MCP servers for Gmail, Google Calendar, and Google Drive"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.scripts]
claude-2-mail = "gmail_calendar_mcp:main"
claude-2-mail-drive = "easter_egg.drive_mcp:main"

[project.urls]
Homepage = "https://github.com/omkargs/claude-2-mail"
Repository = "https://github.com/omkargs/claude-2-mail"
