[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-2-mail"
version = "0.1.0"
description = "Local MCP servers for Gmail, Google Calendar, and Google Drive"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "omkargs", email = "omkargskrishnan@gmail.com"}]
keywords = ["mcp", "gmail", "google-calendar", "google-drive", "google-workspace", "ai-agent", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
]
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "google-api-python-client>=2.0.0,<3.0.0",
    "google-auth-httplib2>=0.2.0,<1.0.0",
    "google-auth-oauthlib>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
]

[project.scripts]
claude-2-mail = "gmail_calendar_mcp:main_sync"

[project.urls]
Homepage = "https://github.com/omkargs/claude-2-mail"
Repository = "https://github.com/omkargs/claude-2-mail"
